--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css">
-<body>
-
-</body>
 </head>
-</html>
+
+<body>
+    <section class="container principal"> 
+    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+</section>
+</body>
+
+</html>                                                                                                                                                                                                                                                                         
