--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+                                                                                                                                                                                                                                                                                                                        <!DOCTYPE html>
 <html>
 
 <head>
@@ -12,14 +12,19 @@
 
 <body>
     <section class="container principal"> 
-<div>
+<div class="container__caixa">
     <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+       único.</h1>
+    <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class ="container__imagem">
     <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
     <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
     <p class="container_avisa">"O preço pode variar caso a assinatura seja feita em outros planos.</p>
     </div>
-    <section>
+    </section>
+
+<section class="container secundario">
+    <img src="img/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
+
 </body>
 
 </html>                                                                                                                                                                                                                                                                         
